--- a/ToyModels/BennyPhD_ToyModel_01-LeastSq_Fitting.ipynb
+++ b/ToyModels/BennyPhD_ToyModel_01-LeastSq_Fitting.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,12 +593,452 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "code_folding": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yday</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.939636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.050175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.160714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.271253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.381792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.492331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.602870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.713409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>4.823948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.934487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.045026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.155565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>5.175529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>5.195492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5.215456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.235419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.255383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>5.275346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>5.295310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>5.315273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5.335237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>5.355200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>5.375164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>5.395127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>5.415091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>5.435054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>5.455018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5.474982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>5.494945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>5.514909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>335.0</td>\n",
+       "      <td>2.138184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>336.0</td>\n",
+       "      <td>2.122496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>337.0</td>\n",
+       "      <td>2.106809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>338</th>\n",
+       "      <td>338.0</td>\n",
+       "      <td>2.091121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>339.0</td>\n",
+       "      <td>2.075434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>340.0</td>\n",
+       "      <td>2.059746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>341</th>\n",
+       "      <td>341.0</td>\n",
+       "      <td>2.044059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>342.0</td>\n",
+       "      <td>2.028371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>343.0</td>\n",
+       "      <td>2.012684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>344.0</td>\n",
+       "      <td>1.996996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>345.0</td>\n",
+       "      <td>1.981308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>346.0</td>\n",
+       "      <td>1.965621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>347.0</td>\n",
+       "      <td>1.949933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>348.0</td>\n",
+       "      <td>2.060472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>349.0</td>\n",
+       "      <td>2.171011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>350.0</td>\n",
+       "      <td>2.281550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>351.0</td>\n",
+       "      <td>2.392089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>352</th>\n",
+       "      <td>352.0</td>\n",
+       "      <td>2.502628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>353.0</td>\n",
+       "      <td>2.613167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>354</th>\n",
+       "      <td>354.0</td>\n",
+       "      <td>2.723707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>355.0</td>\n",
+       "      <td>2.834246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356</th>\n",
+       "      <td>356.0</td>\n",
+       "      <td>2.944785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>357.0</td>\n",
+       "      <td>3.055324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>358.0</td>\n",
+       "      <td>3.165863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>359.0</td>\n",
+       "      <td>3.276402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>360.0</td>\n",
+       "      <td>3.386941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>361.0</td>\n",
+       "      <td>3.497480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>362.0</td>\n",
+       "      <td>3.608019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>363.0</td>\n",
+       "      <td>3.718558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>364.0</td>\n",
+       "      <td>3.829097</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>365 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      yday     Value\n",
+       "0      0.0  3.939636\n",
+       "1      1.0  4.050175\n",
+       "2      2.0  4.160714\n",
+       "3      3.0  4.271253\n",
+       "4      4.0  4.381792\n",
+       "5      5.0  4.492331\n",
+       "6      6.0  4.602870\n",
+       "7      7.0  4.713409\n",
+       "8      8.0  4.823948\n",
+       "9      9.0  4.934487\n",
+       "10    10.0  5.045026\n",
+       "11    11.0  5.155565\n",
+       "12    12.0  5.175529\n",
+       "13    13.0  5.195492\n",
+       "14    14.0  5.215456\n",
+       "15    15.0  5.235419\n",
+       "16    16.0  5.255383\n",
+       "17    17.0  5.275346\n",
+       "18    18.0  5.295310\n",
+       "19    19.0  5.315273\n",
+       "20    20.0  5.335237\n",
+       "21    21.0  5.355200\n",
+       "22    22.0  5.375164\n",
+       "23    23.0  5.395127\n",
+       "24    24.0  5.415091\n",
+       "25    25.0  5.435054\n",
+       "26    26.0  5.455018\n",
+       "27    27.0  5.474982\n",
+       "28    28.0  5.494945\n",
+       "29    29.0  5.514909\n",
+       "..     ...       ...\n",
+       "335  335.0  2.138184\n",
+       "336  336.0  2.122496\n",
+       "337  337.0  2.106809\n",
+       "338  338.0  2.091121\n",
+       "339  339.0  2.075434\n",
+       "340  340.0  2.059746\n",
+       "341  341.0  2.044059\n",
+       "342  342.0  2.028371\n",
+       "343  343.0  2.012684\n",
+       "344  344.0  1.996996\n",
+       "345  345.0  1.981308\n",
+       "346  346.0  1.965621\n",
+       "347  347.0  1.949933\n",
+       "348  348.0  2.060472\n",
+       "349  349.0  2.171011\n",
+       "350  350.0  2.281550\n",
+       "351  351.0  2.392089\n",
+       "352  352.0  2.502628\n",
+       "353  353.0  2.613167\n",
+       "354  354.0  2.723707\n",
+       "355  355.0  2.834246\n",
+       "356  356.0  2.944785\n",
+       "357  357.0  3.055324\n",
+       "358  358.0  3.165863\n",
+       "359  359.0  3.276402\n",
+       "360  360.0  3.386941\n",
+       "361  361.0  3.497480\n",
+       "362  362.0  3.608019\n",
+       "363  363.0  3.718558\n",
+       "364  364.0  3.829097\n",
+       "\n",
+       "[365 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "NO3NO2 = pandas.read_csv('CARIACO_forcing01/NO2NO3_r1.csv')\n",
+    "\n",
+    "def returnintverifdat(DF):\n",
+    "    DF = DF.assign(month = pandas.to_datetime(DF['yday'], format='%j').dt.month)\n",
+    "    DF_monthly_median = DF.groupby('month').median()\n",
+    "    \n",
+    "    DF_m1 = DF_monthly_median.copy()\n",
+    "    DF_m2 = DF_monthly_median.copy()\n",
+    "    DF_m3 = DF_monthly_median.copy()\n",
+    "\n",
+    "    DF_m2['yday'] = DF_m2['yday'] + 365\n",
+    "    DF_m3['yday'] = DF_m3['yday'] + 2 * 365\n",
+    "\n",
+    "    DF_x = pandas.concat([DF_m1, DF_m2, DF_m3])\n",
+    "\n",
+    "    tm_dat_conc = np.arange(0., 3 * 365., 1.0)\n",
+    "\n",
+    "    DF_pad = DF_x.set_index('yday').reindex(tm_dat_conc).reset_index()\n",
+    "\n",
+    "    DF_int = DF_pad.Value.interpolate().values #.plot() # .ffill().bfill()\n",
+    "    DF_intslice = DF_int[365:365+365]\n",
+    "\n",
+    "    tm_year = np.arange(0., 365., 1.0)\n",
+    "\n",
+    "    DF_int2 = pandas.DataFrame()\n",
+    "    DF_int2['yday'] = tm_year\n",
+    "    DF_int2['Value'] = DF_intslice\n",
+    "    return DF_int2\n",
+    "\n",
+    "returnintverifdat(NO3NO2)"
+   ]
   },
   {
    "cell_type": "code",
