--- a/PhDProposal 01/Chp22-Pre2/PreResults22.tex
+++ b/PhDProposal 01/Chp22-Pre2/PreResults22.tex
@@ -1,6 +1,7 @@
 \chapter{PhytoMFTM - a flexible object-oriented PFT model}
 
-\small {\textbf{}}
+
+\small {\textbf{This is the work towards the second manuscript, to be submitted to Geoscientific Model Development (GMD)}}
 
 
 \normalsize
@@ -49,10 +50,3 @@ XXX
 
 
 End Methods here
-
-\section{How to complete this project}
-
-
-Just say that this model was the basis for the previous chapter work, and will be for the rest of my PhD, a toolkit for testing ideas with multiple functional types! go towards selection-based models, like DARWIN
-and how the allow to change the biodiversity explicitly, to test hypothesis
-
