--- a/PhDProposal 01/Chp3-Further/Further.tex
+++ b/PhDProposal 01/Chp3-Further/Further.tex
@@ -2,9 +2,31 @@
 
 \section{Where to go from here}
 
-\subsection{BDEF}
+\subsection{How to complete project 1}
 
- HERE I should cite the Tilman and Ptacnik Papers that Esteban recommended, talk about how Biodiversity influences ressource use efficiency
+XXXXXXXX
+
+essentially just check model physics again, and then
+create nice runs, and then go and test the hypotheses, like so and so and so..
+XXXXXXX
+
+X
+
+XXX
+
+
+\subsection{How to complete project 2}
+
+
+Just say that this model was the basis for the previous chapter work, and will be for the rest of my PhD, a toolkit for testing ideas with multiple functional types! go towards selection-based models, like DARWIN
+and how they allow to change the biodiversity explicitly, to test hypothesis
+
+
+
+
+\section{BDEF - Project No 3}
+
+ HERE I should cite the Tilman and Ptacnik Papers that Esteban recommended, talk about how Biodiversity influences resource use efficiency
  
 ALSO BDEF MODEL BY LOREAU: \citep{Loreau1998b}
  
@@ -19,7 +41,6 @@ XXXX
 
 
 
-\section{Relevance}
 Again talk shortly about how biodiversity means ecosystem resilience (kinda) and how climate change and anthropogenic stressors will test, if not break the boundaries of the ecosystem resilience. We are still trying to understand the basic connections between the main organisms and functional types in the ocean. Such that we can only guess at what steady state lies behind the boundary, but perhaps we should better never find out.
 
 XXXXX
