--- a/PhDProposal 01/proposal.tex
+++ b/PhDProposal 01/proposal.tex
@@ -9,6 +9,7 @@
 \usepackage[utf8]{inputenc} % set input encoding (not needed with XeLaTeX)
 \usepackage{graphicx,natbib,amssymb,amsmath,lineno}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+\setcitestyle{aysep={}}
 %%% Examples of Article customizations
 % These packages are optional, depending whether you want the features they provide.
 % See the LaTeX Companion or other references for full information.
@@ -39,10 +40,10 @@
 % These packages are all incorporated in the memoir class to one degree or another...
 %\usepackage{times}
 \usepackage[colorlinks = true,
-            linkcolor = blue,
+            linkcolor = black,
             urlcolor  = blue,
-            citecolor = blue,
-            anchorcolor = blue]{hyperref}
+            citecolor = black,
+            anchorcolor = black]{hyperref}
 
 %%% HEADERS & FOOTERS
 \usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
